--- a/_2_css/index.css
+++ b/_2_css/index.css
@@ -19,6 +19,9 @@
     font-family: Arial, Helvetica, sans-serif;
     color: yellowgreen;
 
+    column-count: 2;
+    column-rule: 1px solid black;
+
 }
 p:hover {
     /* üzerine geldiğimizde zıt çalışır */
@@ -45,6 +48,8 @@ p:hover {
     text-shadow: 2px 2px 2px black;
     transition: 2s;
     padding: 1%;
+
+
 }
 .div_class:hover{
     background-color: black;
@@ -56,7 +61,10 @@ p:hover {
     width: 45%;
     
 }
-
+img{
+    max-width: 100%;
+    height: auto;
+}
 *{
     margin: 0;
     padding: 0;
@@ -64,6 +72,14 @@ p:hover {
 }
 html{
 font-size: 15px;
+}
+header{
+    background-image: url("../utils/img/uckus.jpg");
+    width: 100%;
+    height: 400px;
+    margin-bottom:1rem;
+    background-size: cover;
+    background-position: center;
 }
 
 body{
@@ -112,3 +128,23 @@ ul li:hover{
 #back_top:hover{
     opacity: 0.5;
 }
+
+.div_float{
+    background-color: blue;
+    color: white;
+    width: 23%;
+    display: inline-block;
+    min-height: 50px;
+    padding: 1rem;
+    float: right;/* tersten başlat */
+    margin-right: 10px;
+    margin-right: 2rem;
+    box-shadow: 10px 10px 5px rgba(0,0,0,0.4);
+
+}
+
+.div_float:hover{
+    box-shadow: 1px 1px 5px 1px rgba(0,0,0,0.5);
+}
+
+
