--- a/blog/src/components/main.css
+++ b/blog/src/components/main.css
@@ -1,14 +1,94 @@
-/* HEADER */
+/*HEADER*/
 header{
-    background-image: url('../../img/greenn.jpg');
-    height: 100vh;
+    background-image: url('../image/office.jpg');
+    height: 75vh;
     background-size: cover;
     background-position: center;
-    padding-top: 1rem;
+    padding-top: 12rem;
     z-index: -1;
     opacity: 0.9;
 }
-/*MAIN SECTİON */
 
 
+/* MAIN SECTION */
+/*SERVICES*/
+#services_id{
+    margin-bottom:4rem;
+    margin-top: 2rem;
+}
 
+#services_id .icon_service i {
+    font-size: 3rem;
+    color: #dc3545;
+    margin-bottom: 1rem;
+    margin-left: 4rem;
+}
+
+#services_id .icon_service h4{
+    text-transform: capitalize;
+    font-weight: 600;
+}
+
+/*BLOG*/
+#blog_id{
+    margin-bottom: 4rem;
+    margin-top: 8rem;
+    padding:3rem .1rem;
+    background-color: rgb(166, 165, 167);
+}
+
+#blog_id h2{
+    color:white;
+    margin-bottom:4rem;
+}
+
+#blog_id .blog_service .container .row .card img{
+    max-width: 100%;
+    height: 15rem;
+    padding:0.2rem;
+}
+
+#blog_id .blog_service .container .row .card img:hover{
+    transition: ease-in-out 3s;
+    transform: rotate(360deg);
+    opacity: 0.8;
+}
+
+#blog_id .blog_service .card-body h4,p{
+   color:black;
+}
+
+/* ABOUT */
+#about_id{
+    background-image: url("../image/office.jpg");
+    background-color: transparent;
+    background-attachment: fixed;
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 40rem;
+    padding:2rem;
+}
+
+/* CONTACT */
+#contact_id{
+    margin-bottom: 4rem;
+    margin-top: 8rem;
+    padding:3rem .1rem;
+}
+
+/*BACK TO TOP*/
+#backToTop{
+    position: fixed;
+    bottom: 0.7rem;
+    right: 0.5rem;
+    background-color: #dc3545;
+    color: white;
+    width: 3rem;
+    height: 3rem;
+    text-align: center;
+    line-height: 3rem;
+    font-size: 1.5rem;
+    border-radius: 50%;
+    cursor: pointer;
+    /* display: none; */
+}
